[metadata]
name = tno.mpc.mpyc.secure_learning
author = TNO MPC Lab
author_email = mpclab@tno.nl
maintainer = TNO MPC Lab
maintainer_email = mpclab@tno.nl
description = Machine learning using Secure Multi-Party Computation
classifiers =
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Operating System :: OS Independent
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: Science/Research
    Typing :: Typed
    Topic :: Security :: Cryptography
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Scientific/Engineering :: Information Analysis
license = Apache License, Version 2.0
license_files = LICENSE
platform = any
python_requires = >=3.7
keywords =
    TNO
    MPC
    multi-party computation
    secure learning
    regression
    lasso
    logistic
    SVM
    ridge
url = https://mpc.tno.nl/
download_url = https://pypi.org/project/tno.mpc.mpyc.secure_learning/#files
project_urls =
    Documentation = https://docs.mpc.tno.nl/mpyc/secure_learning/1.1.1
    Source Code = https://github.com/TNO-MPC/mpyc.secure_learning
version = attr: tno.mpc.mpyc.secure_learning.__version__
long_description_content_type = text/markdown
long_description = file: README.md

[options]
packages =
    tno.mpc.mpyc.secure_learning
    tno.mpc.mpyc.secure_learning.models
    tno.mpc.mpyc.secure_learning.solvers
    tno.mpc.mpyc.secure_learning.test
    tno.mpc.mpyc.secure_learning.test.plaintext_utils
    tno.mpc.mpyc.secure_learning.utils
zip_safe = False
install_requires =
    mpyc
    numpy
    tno.mpc.mpyc.exponentiation>=1.6.0
    tno.mpc.mpyc.stubs>=0.4.2
    typing_extensions
    scikit-learn
namespace_packages =
    tno
    tno.mpc
    tno.mpc.mpyc
include_package_data = True

[options.package_data]
tno.mpc.mpyc.secure_learning = py.typed

[options.extras_require]
gmpy =
    gmpy2>=2.1.0
tests =
    numpy>=1.21
    pytest
    pytest-asyncio

